Renamed function headers for clarity.

--- a/My_Simple_Shell/CMakeLists.txt
+++ b/My_Simple_Shell/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.3)
-project(Lab8)
+project(My_Simple_Shell)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
@@ -13,7 +13,6 @@ set(SOURCE_FILES
     linkedlist/linkedList.h
     linkedlist/listUtils.c
     linkedlist/listUtils.h
-    linkedlist/requiredIncludes.h
     pipes/pipes.c
     pipes/pipes.h
     process/process.c
@@ -24,8 +23,8 @@ set(SOURCE_FILES
     tokenize/makeArgs.h
     utils/myUtils.c
     utils/myUtils.h
-    cscd340hw8.c
-        string_edit/string_edit.c
-        string_edit/string_edit.h)
+    msshmain.c
+    string_edit/string_edit.c
+    string_edit/string_edit.h)
 
-add_executable(Lab8 ${SOURCE_FILES})
+add_executable(My_Simple_Shell ${SOURCE_FILES})
